# Kurs

Diplom/MyServer/: CMakeLists.txt  Config.ini  MyServer.cpp
Diplom/Spider2/: CMakeLists.txt  Config.ini  Spider2.cpp
Kursovaya2/Gonka/Gonka/: Broom.cpp  FastCamel.cpp  FlyCarpet.cpp  Gonka.cpp
Kursovaya4/KursovayaPotolobesopasnayaOchered/: KursovayaPotolobesopasnayaOchered.sln
Kursovaya4/KursovayaPotolobesopasnayaOchered/KursovayaPotolobesopasnayaOchered/: KursovayaPotolobesopasnayaOchered.cpp  KursovayaPotolobesopasnayaOchered.vcxproj  KursovayaPotolobesopasnayaOchered.vcxproj.filters
Kursovaya5/InspektorAeroportov/: CMakeLists.txt  DataBase.cpp  DataBase.h  graphwin.cpp  graphwin.h  graphwin.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Kusrovaya3/Parser_Ini/: Parser_Ini.sln
Kusrovaya3/Parser_Ini/Parser_Ini/: Config.ini  Parser_Ini.cpp  Parser_Ini.vcxproj  Parser_Ini.vcxproj.filters
